frontend/src/pages/SearchPage.css
.searchPage__header {
    display: flex;
    position: sticky;
    top: 0;
    background-color: white;
    z-index: 100;
    align-items: flex-start;
    padding: 30px;
    border-bottom: 1px solid lightgray;
}


.searchPage__logo {
    object-fit: contain;
    height: 50px;
    margin-right: -20px;
}

.searchPage__headerBody > .search > .search__input {
    margin-top: 0;
    width: unset;
    margin: unset;
    max-width: unset;
}

.searchPage__result {
    margin: 40px 0;
}

.searchPage__resultCount {
    color: rgb(135, 135, 135);
    font-size: 14px;
}

.searchPage__results {
    max-width: 650px;
    margin-top: 20px;
    margin-left: 240px;
    margin-bottom: 100px;
}

.searchPage__resultTitle {
    text-decoration: none;
    color: rgba(37, 104, 116, 0.886);
}

.searchPage__resultTitle:hover {
    text-decoration: underline;
}

.searchPage__url {
    font-style: italic;
    color:rgb(201, 145, 110);
}

.searchPage__resultTitle > h2 {
    font-weight: 500;
}

.searchPage__resultSnippet {
    margin-top: 10px;
    font-weight: 300;
}

